// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoginOptionsSwitch should not render biometric option when shouldRenderBiometricOption is null 1`] = `
<View
  style={
    {
      "marginBottom": 30,
      "marginTop": 20,
      "position": "relative",
    }
  }
>
  <Text
    style={
      {
        "color": "#141618",
        "flex": 1,
        "fontFamily": "EuclidCircularB-Regular",
        "fontSize": 16,
        "fontWeight": "400",
      }
    }
  >
    choose_password.remember_me
  </Text>
  <RCTSwitch
    accessibilityRole="switch"
    onChange={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    onTintColor="#0376c9"
    style={
      [
        {
          "height": 31,
          "width": 51,
        },
        [
          {
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "backgroundColor": "#bbc0c566",
            "borderRadius": 16,
          },
        ],
      ]
    }
    testID="remember-me-switch"
    thumbTintColor="#ffffff"
    tintColor="#bbc0c566"
    value={false}
  />
</View>
`;

exports[`LoginOptionsSwitch should render correctly with Face ID option 1`] = `
<View
  style={
    {
      "marginBottom": 30,
      "marginTop": 20,
      "position": "relative",
    }
  }
>
  <Text
    style={
      {
        "color": "#141618",
        "flex": 1,
        "fontFamily": "EuclidCircularB-Regular",
        "fontSize": 16,
        "fontWeight": "400",
      }
    }
  >
    Enable Face ID
  </Text>
  <RCTSwitch
    accessibilityRole="switch"
    onChange={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    onTintColor="#0376c9"
    style={
      [
        {
          "height": 31,
          "width": 51,
        },
        [
          {
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "backgroundColor": "#bbc0c566",
            "borderRadius": 16,
          },
        ],
      ]
    }
    testID="login-with-biometrics-switch"
    thumbTintColor="#ffffff"
    tintColor="#bbc0c566"
    value={true}
  />
</View>
`;

exports[`LoginOptionsSwitch should render correctly with Touch ID option 1`] = `
<View
  style={
    {
      "marginBottom": 30,
      "marginTop": 20,
      "position": "relative",
    }
  }
>
  <Text
    style={
      {
        "color": "#141618",
        "flex": 1,
        "fontFamily": "EuclidCircularB-Regular",
        "fontSize": 16,
        "fontWeight": "400",
      }
    }
  >
    Enable Touch ID
  </Text>
  <RCTSwitch
    accessibilityRole="switch"
    onChange={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    onTintColor="#0376c9"
    style={
      [
        {
          "height": 31,
          "width": 51,
        },
        [
          {
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "backgroundColor": "#bbc0c566",
            "borderRadius": 16,
          },
        ],
      ]
    }
    testID="login-with-biometrics-switch"
    thumbTintColor="#ffffff"
    tintColor="#bbc0c566"
    value={true}
  />
</View>
`;
